--- a/index.html
+++ b/index.html
@@ -43,8 +43,8 @@
                 </svg>
             </div>
             <div class="sidebar__user">
-                <div class="sidebar__name">Виталий Ушаков</div>
-                <div class="sidebar__text">Счастливый студент</div>
+                <div class="sidebar__name">.Антон федотов</div>
+                <div class="sidebar__text">,Новичок,</div>
             </div>
             <div class="sidebar__tabs">
                 <div class="sidebar__item">
@@ -93,9 +93,12 @@
                 <div class="content__title">Домашние задания</div>
                 <ul class="content__list">
                     <li class="content__list-item">
-                        <a href="lesson1/index.html">Урок 1</a>
+                        <a href=",hello-aroken.ru/index.html">Урок 1</a>
                     </li>
                 </ul>
+                   <li class="content__list-item">
+                        <a href=",hello-aroken.ru/index.html">Урок 2.</a>
+                    </li>
             </div>
             <div class="content__block hidden" id="diplomBlock">
                 <div class="content__title">Дипломный проект</div>
