--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
                         <a href="hello-aroken.ru/index.html">Урок 1</a>
                     </li>
                    <li class="content__list-item">
-                        <a href="hello-aroken.ru/index.html">Урок 2</a>
+                        <a href="Урок 2/index.html">Урок 2</a>
                     </li>
             </div>
             <div class="content__block hidden" id="diplomBlock">
