--- a/index.html
+++ b/index.html
@@ -98,6 +98,9 @@
                    <li class="content__list-item">
                         <a href="Урок 2/index.html">Урок 2</a>
                     </li>
+                    <li class="content__list-item">
+                        <a href="Урок 2/index.html">макет верстки</a>
+                    </li>
             </div>
             <div class="content__block hidden" id="diplomBlock">
                 <div class="content__title">Дипломный проект</div>
