--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
                         <a href="Урок 2/index.html">Урок 2</a>
                     </li>
                     <li class="content__list-item">
-                        <a href="Урок 2/index.html">Урок 3</a>
+                        <a href="макет верстки/index.html">Урок 3</a>
                     </li>
             </div>
             <div class="content__block hidden" id="diplomBlock">
