--- a/index.html
+++ b/index.html
@@ -101,6 +101,9 @@
                     <li class="content__list-item">
                         <a href="макет верстки/index.html">Урок 3</a>
                     </li>
+                          <li class="content__list-item">
+                        <a href="Домашка по шрифту и тексту/index.html">Урок 4</a>
+                    </li>
             </div>
             <div class="content__block hidden" id="diplomBlock">
                 <div class="content__title">Дипломный проект</div>
