--- a/index.html
+++ b/index.html
@@ -104,6 +104,9 @@
                           <li class="content__list-item">
                         <a href="Домашка по шрифту и тексту/index.html">Урок 4</a>
                     </li>
+                          <li class="content__list-item">
+                        <a href="Дом.по свойствам/index.html">Урок 5</a>
+                    </li>
             </div>
             <div class="content__block hidden" id="diplomBlock">
                 <div class="content__title">Дипломный проект</div>
