--- a/index.html
+++ b/index.html
@@ -107,6 +107,9 @@
                           <li class="content__list-item">
                         <a href="Дом. по свойствам/index.html">Урок 5</a>
                     </li>
+                          <li class="content__list-item">
+                        <a href="Lesson-43/index.html">Урок 6</a>
+                    </li>
             </div>
             <div class="content__block hidden" id="diplomBlock">
                 <div class="content__title">Дипломный проект</div>
