--- a/index.html
+++ b/index.html
@@ -110,6 +110,9 @@
                           <li class="content__list-item">
                         <a href="Lesson-43/index.html">Урок 6</a>
                     </li>
+                          <li class="content__list-item">
+                        <a href="БЭМ/index.html">Урок 7</a>
+                    </li>
             </div>
             <div class="content__block hidden" id="diplomBlock">
                 <div class="content__title">Дипломный проект</div>
