--- a/index.html
+++ b/index.html
@@ -113,6 +113,18 @@
                           <li class="content__list-item">
                         <a href="БЭМ/index.html">Урок 7</a>
                     </li>
+                          <li class="content__list-item">
+                        <a href="Home Position/index.html">Урок 8</a>
+                    </li>
+                          <li class="content__list-item">
+                        <a href="Home Transform/index.html">Урок 9</a>
+                    </li>
+                          <li class="content__list-item">
+                        <a href="Home Плав.Пер/index.html">Урок 10</a>
+                    </li>
+                          <li class="content__list-item">
+                        <a href="Home Псевдоэлементы/index.html">Урок 11</a>
+                    </li>
             </div>
             <div class="content__block hidden" id="diplomBlock">
                 <div class="content__title">Дипломный проект</div>
