--- a/index.html
+++ b/index.html
@@ -125,6 +125,9 @@
                           <li class="content__list-item">
                         <a href="Home Псевдоэлементы/index.html">Урок 11</a>
                     </li>
+                          <li class="content__list-item">
+                        <a href="Maket/index.html">Урок 12</a>
+                    </li>
             </div>
             <div class="content__block hidden" id="diplomBlock">
                 <div class="content__title">Дипломный проект</div>
