--- a/index.html
+++ b/index.html
@@ -128,6 +128,9 @@
                           <li class="content__list-item">
                         <a href="Maket/index.html">Урок 12</a>
                     </li>
+                          <li class="content__list-item">
+                        <a href="JS-1/index.html">Урок 13</a>
+                    </li>
             </div>
             <div class="content__block hidden" id="diplomBlock">
                 <div class="content__title">Дипломный проект</div>
@@ -147,3 +150,4 @@
 <script src="src/index.js"></script>
 </body>
 </html>
+
