--- a/index.html
+++ b/index.html
@@ -131,6 +131,9 @@
                           <li class="content__list-item">
                         <a href="JS-1/index.html">Урок 13</a>
                     </li>
+                          <li class="content__list-item">
+                        <a href="JS-2/index.html">Урок 14</a>
+                    </li>
             </div>
             <div class="content__block hidden" id="diplomBlock">
                 <div class="content__title">Дипломный проект</div>
@@ -150,4 +153,5 @@
 <script src="src/index.js"></script>
 </body>
 </html>
+
 
