--- a/index.html
+++ b/index.html
@@ -134,6 +134,9 @@
                           <li class="content__list-item">
                         <a href="JS-2/index.html">Урок 14</a>
                     </li>
+                          <li class="content__list-item">
+                        <a href="wake-bake/index.html">Урок 15</a>
+                    </li>
             </div>
             <div class="content__block hidden" id="diplomBlock">
                 <div class="content__title">Дипломный проект</div>
@@ -153,5 +156,6 @@
 <script src="src/index.js"></script>
 </body>
 </html>
+
 
 
