--- a/index.html
+++ b/index.html
@@ -137,6 +137,9 @@
                           <li class="content__list-item">
                         <a href="wake-bake/index.html">Урок 15</a>
                     </li>
+                          <li class="content__list-item">
+                        <a href="wake-bake adapt/index.html">Урок 16</a>
+                    </li>
             </div>
             <div class="content__block hidden" id="diplomBlock">
                 <div class="content__title">Дипломный проект</div>
@@ -156,6 +159,7 @@
 <script src="src/index.js"></script>
 </body>
 </html>
+
 
 
 
