--- a/index.html
+++ b/index.html
@@ -143,6 +143,9 @@
                           <li class="content__list-item">
                         <a href="wake-bake 135/index.html">Урок 17</a>
                     </li>
+                          <li class="content__list-item">
+                        <a href="wake-bake adapt 143/index.html">Урок 18</a>
+                    </li>
             </div>
             <div class="content__block hidden" id="diplomBlock">
                 <div class="content__title">Дипломный проект</div>
@@ -162,6 +165,7 @@
 <script src="src/index.js"></script>
 </body>
 </html>
+
 
 
 
