--- a/index.html
+++ b/index.html
@@ -146,6 +146,9 @@
                           <li class="content__list-item">
                         <a href="wake-bake adapt 143/index.html">Урок 18</a>
                     </li>
+                          <li class="content__list-item">
+                        <a href="wake-bake adapt 147/index.html">Урок 19</a>
+                    </li>
             </div>
             <div class="content__block hidden" id="diplomBlock">
                 <div class="content__title">Дипломный проект</div>
@@ -165,6 +168,7 @@
 <script src="src/index.js"></script>
 </body>
 </html>
+
 
 
 
