--- a/index.html
+++ b/index.html
@@ -149,6 +149,10 @@
                           <li class="content__list-item">
                         <a href="wake-bake adapt 147/index.html">Урок 19</a>
                     </li>
+                    </li>
+                          <li class="content__list-item">
+                        <a href="wake-bake adapt 150/index.html">Урок 20</a>
+                    </li>
             </div>
             <div class="content__block hidden" id="diplomBlock">
                 <div class="content__title">Дипломный проект</div>
@@ -168,6 +172,7 @@
 <script src="src/index.js"></script>
 </body>
 </html>
+
 
 
 
