--- a/index.html
+++ b/index.html
@@ -153,6 +153,9 @@
                           <li class="content__list-item">
                         <a href="wake-bake adapt 150/index.html">Урок 20</a>
                     </li>
+                          <li class="content__list-item">
+                        <a href="wake-bake adapt 154/index.html">Урок 21</a>
+                    </li>
             </div>
             <div class="content__block hidden" id="diplomBlock">
                 <div class="content__title">Дипломный проект</div>
@@ -172,6 +175,7 @@
 <script src="src/index.js"></script>
 </body>
 </html>
+
 
 
 
