--- a/index.html
+++ b/index.html
@@ -156,6 +156,10 @@
                           <li class="content__list-item">
                         <a href="wake-bake adapt 154/index.html">Урок 21</a>
                     </li>
+                    </li>
+                          <li class="content__list-item">
+                        <a href=Diplom/index.html">Урок 22</a>
+                    </li>
             </div>
             <div class="content__block hidden" id="diplomBlock">
                 <div class="content__title">Дипломный проект</div>
@@ -175,6 +179,7 @@
 <script src="src/index.js"></script>
 </body>
 </html>
+
 
 
 
